<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".BuildingSearchFragment" >
	<TextView
		android:id="@+id/title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:gravity="center_horizontal"
		android:text="@string/building_title"
		android:textAppearance="?android:attr/textAppearanceMedium" />
	<TextView
		android:id="@+id/subtitle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/title"
		android:layout_centerHorizontal="true"
		android:gravity="center_horizontal"
		android:text="@string/zip_subtitle"
		android:textAppearance="?android:attr/textAppearanceSmall" />
	<View
		android:id="@+id/first_divider"
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:layout_below="@+id/subtitle"
		android:layout_marginBottom="16dp"
		android:background="?android:attr/listDivider" />
	<EditText
		android:id="@+id/zip_code"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/first_divider"
		android:layout_centerHorizontal="true"
		android:ems="10"
		android:hint="@string/zip"
		android:inputType="number" >
		<requestFocus />
	</EditText>
	<Button
		android:id="@+id/zip_button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@+id/zip_code"
		android:layout_centerHorizontal="true"
		android:text="@string/go" />
</RelativeLayout>