<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="16dp"
	android:paddingLeft="16dp"
	android:paddingRight="16dp"
	android:paddingTop="8dp" >
	<EditText
		android:id="@+id/attuid"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:ems="10"
		android:hint="@string/attuid"
		android:inputType="textEmailAddress" >
		<requestFocus />
	</EditText>
	<EditText
		android:id="@+id/password"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignLeft="@+id/attuid"
		android:layout_below="@+id/attuid"
		android:ems="10"
		android:hint="@string/global_password"
		android:imeActionLabel="@string/go"
		android:imeOptions="actionGo"
		android:inputType="textPassword" />
	<ProgressBar
		android:id="@+id/progress"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignBottom="@+id/password"
		android:layout_toLeftOf="@+id/attuid"
		android:visibility="invisible" />
</RelativeLayout>