<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:focusableInTouchMode="true"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context=".IncidentRecNumSearchFragment" >
	<ImageView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentRight="true"
		android:contentDescription="background"
		android:scaleType="centerCrop"
		android:src="@drawable/colors_att" />
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent" >
		<View
			android:id="@+id/first_divider"
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:layout_below="@+id/subtitle"
			android:layout_marginBottom="16dp"
			android:background="?android:attr/listDivider" />
		<TextView
			android:id="@+id/authorization"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@+id/first_divider"
			android:layout_alignParentRight="true"
			android:textAppearance="?android:attr/textAppearanceSmall" />
		<TextView
			android:id="@+id/attuid"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@+id/first_divider"
			android:layout_alignParentLeft="true"
			android:textAppearance="?android:attr/textAppearanceSmall" />
		<LinearLayout
			android:id="@+id/go_button_container"
			style="?android:attr/buttonBarStyle"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:layout_centerHorizontal="true" >
			<Button
				android:id="@+id/go_button"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/go" />
		</LinearLayout>
		<TextView
			android:id="@+id/title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:gravity="center_horizontal"
			android:text="@string/incident_rec_num_search_title"
			android:textAppearance="?android:attr/textAppearanceMedium" />
		<TextView
			android:id="@+id/subtitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/title"
			android:layout_centerHorizontal="true"
			android:gravity="center_horizontal"
			android:text="@string/incident_rec_num_search_subtitle"
			android:textAppearance="?android:attr/textAppearanceSmall" />
		<EditText
			android:id="@+id/damage_get_record_number"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/first_divider"
			android:layout_centerHorizontal="true"
			android:ems="10"
			android:hint="@string/record_number"
			android:imeActionLabel="@string/go"
			android:imeOptions="actionGo"
			android:inputType="number"
			android:maxLength="4" >
		</EditText>
	</RelativeLayout>
</RelativeLayout>